--- a/manage_breast_screening/auth/jinja2/auth/persona_login.jinja
+++ b/manage_breast_screening/auth/jinja2/auth/persona_login.jinja
@@ -1,30 +1,61 @@
 {% extends 'layout-app.jinja' %}
 {% from "nhsuk/components/button/macro.jinja" import button %}
+{% from "nhsuk/components/summary-list/macro.jinja" import summaryList %}
 
 {% block page_content %}
 <div class="nhsuk-grid-row">
-  <div class="nhsuk-grid-column-full">
+  <div class="nhsuk-grid-column-two-thirds">
     <h1 class="nhsuk-heading-l">
       {{ page_title }}
     </h1>
+    <p>
+      Persona logins are provided in non-production environments to allow us to simulate logging in as users in various roles from different providers.
+    </p>
 
-    {% for user in users %}
-      <h2>{{ user.first_name }} {{ user.last_name }}{% if user == current_user %} (logged in){% endif %}</h2>
-      <p>{{ user.first_name }} has <b>{{ user.assignments.all() | map(attribute='roles') | sum(start=[]) | unique | join(', ') }}</b> access.</p>
+    <form action="{{ request.path }}" method="post" novalidate>
+      <input type="hidden" name="next" value="{{ next }}">
 
-      {% if user != current_user %}
-      <form action="{{ request.path }}" method="post" novalidate>
-        <input type="hidden" name="username" value="{{ user.nhs_uid }}">
-        <input type="hidden" name="next" value="{{ next }}">
+      {% for group in providers_with_users %}
+      <h2 class="nhsuk-heading-m">{{ group.provider.name }}</h2>
 
-        {{ button({
-          "text": "Login as " ~ user.first_name ~ ' ' ~ user.last_name
-        }) }}
-      </form>
-      {% endif %}
+      {% for role, entries in group.roles.items() %}
+      <h3 class="nhsuk-heading-s">{{ role }}</h3>
+      {% set ns = namespace() %}
+      {% set ns.rows = [] %}
+      {% for entry in entries %}
+        {% set visually_hidden_html -%}
+          <span class="nhsuk-u-visually-hidden"> as {{ entry.user.first_name }} {{ entry.user.last_name }}, {{ role }}</span>
+        {%- endset %}
+        {% set value_html %}
+          {% if entry.is_current %}
+            Logged in{{ visually_hidden_html | safe }}
+          {% else %}
+            {{ button({
+              "html": "Log in" ~ visually_hidden_html | safe,
+              "classes": "nhsuk-button--small nhsuk-u-margin-bottom-2",
+              "name": "username",
+              "value": entry.user.nhs_uid
+            }) }}
+          {% endif %}
+        {% endset %}
+        {% set ns.rows = ns.rows + [{
+          "key": {
+            "text": entry.user.first_name ~ " " ~ entry.user.last_name,
+            "classes": "nhsuk-u-width-three-quarters"
+          },
+          "value": {
+            "html": value_html,
+            "classes": "nhsuk-u-text-align-right"
+          }
+        }] %}
+      {% endfor %}
+      {{ summaryList({
+        "rows": ns.rows
+      }) }}
+      {% endfor %}
 
-      {% if not loop.last %}<hr class="nhsuk-section-break--m">{% endif %}
-    {% endfor %}
+      {% endfor %}
+    </form>
   </div>
 </div>
 
