integrate breast diagram component js and scss
This enables annotation of the breast diagram.

Code is taken from Colin's proof of concept branch:

https://github.com/colinrotherham/nhsuk-prototype-kit/blob/b396a61ca3efe7cd084777787deef28dc161a3d0/app/javascripts/breast-diagram.js

--- a/manage_breast_screening/assets/sass/main.scss
+++ b/manage_breast_screening/assets/sass/main.scss
@@ -3,6 +3,7 @@
 @forward "vendor/nhsuk-frontend";
 
 // Components that are not in the NHS.UK frontend library
+@forward "components/breast-diagram";
 @forward "components/button";
 @forward "components/count";
 @forward "components/icon";
