--- a/manage_breast_screening/mammograms/jinja2/mammograms/check_information/medical_information_card.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/check_information/medical_information_card.jinja
@@ -5,7 +5,7 @@
   {% if items %}
     {% for item in items %}
       <p class="nhsuk-u-margin-bottom-2">
-        {{ item }}
+        {{ item | nl2br }}
       </p>
     {% endfor %}
   {% else -%}
@@ -31,6 +31,10 @@
         {
           "key": { "text": "Symptoms" },
           "value" : { "html": medical_history(presented_medical_information.symptoms, 'No symptoms recorded') }
+        },
+        {
+          "key": { "text": "Other relevant information" },
+          "value" : { "html": medical_history(presented_medical_information.other_relevant_information, 'No other information added') }
         }
       ]
     }) }}
