Add appointment cannot proceed link
- add link to check information page
- back link returns to check information page

--- a/manage_breast_screening/mammograms/jinja2/mammograms/check_information.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/check_information.jinja
@@ -34,6 +34,11 @@
   {{ medical_information_card(presented_medical_information) }}
   {{ images_taken_card(presented_images) }}
   {{ appointment_details_card(presented_appointment) }}
+
+  <p>
+    <a class="nhsuk-link nhsuk-link--no-visited-state" href="{{ appointment_cannot_proceed_href }}">Appointment cannot proceed</a>
+  </p>
+
 {% endblock %}
 
 
