--- a/manage_breast_screening/mammograms/jinja2/mammograms/show/appointment_note.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/show/appointment_note.jinja
@@ -9,7 +9,7 @@
     {% set inset_html %}
       <p>
         If adjustments are required,
-        <a href="{{ presented_appointment.special_appointment_url }}">
+        <a href="{{ presented_appointment.special_appointment_url }}" class="nhsuk-link nhsuk-link--no-visited-state">
           provide special appointment details instead
         </a>
       </p>
