Add appointment cannot proceed link
- add link to review medical information page
- back link returns to review medical information page

--- a/manage_breast_screening/mammograms/jinja2/mammograms/record_medical_information.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/record_medical_information.jinja
@@ -73,6 +73,10 @@
 
 {{ complete_all_button }}
 
+<p>
+  <a class="nhsuk-link nhsuk-link--no-visited-state" href="{{ appointment_cannot_proceed_href }}">Appointment cannot proceed</a>
+</p>
+
 {% endblock %}
 
 {% block wizard_form %}
