Add Pause appointment link to header

--- a/manage_breast_screening/core/jinja2/layout-app.jinja
+++ b/manage_breast_screening/core/jinja2/layout-app.jinja
@@ -24,6 +24,11 @@
     "navigation": {
       "items": [
         {
+          "href": url('mammograms:pause_appointment', kwargs={'pk': presented_appointment.pk}),
+          "text": "Pause appointment",
+        },
+      ] if presented_appointment.status_bar and presented_appointment.status_bar.show_status_bar_for(request.user) else [
+        {
           "href": "/",
           "text": "Home",
           "current": true if navActive == "home"
