--- a/manage_breast_screening/core/jinja2/layout-form.jinja
+++ b/manage_breast_screening/core/jinja2/layout-form.jinja
@@ -16,7 +16,7 @@
       {{ heading }}
     </h1>
 
-    <form action="{{request.path}}" method="POST" novalidate {{ nhsukAttributes(form_attributes) }}>
+    <form action="{{ request.path }}" method="post" novalidate {{ nhsukAttributes(form_attributes) }}>
       {{ csrf_input }}
 
       {% block form %}
