Align breast features form with the prototype
- replace the figure caption with the instructive text at the top of the page
- add the link for stopping the appointment early
- add the participant's name, as a heading caption

Other than the figure caption, I've left the diagram component
unchanged, as Colin is working on this in parallel.

--- a/manage_breast_screening/core/jinja2/components/breast-diagram/macro.jinja
+++ b/manage_breast_screening/core/jinja2/components/breast-diagram/macro.jinja
@@ -1,3 +1,3 @@
-{% macro app_breast_diagram(version) %}
+{% macro app_breast_diagram(version, attributes) %}
   {%- include 'components/breast-diagram/template.jinja' -%}
 {% endmacro %}
