When summarising images, show repeats and extras
This is based on the prototype presentation here:

https://github.com/NHSDigital/manage-breast-screening-prototype/blob/d4467a77bf865eef78fe2d51db3ea26062b28516/app/views/_includes/summary-lists/medical-information/mammogram-image-data.njk#L196

This is specifically for manually added images where we don't have
thumbnails and image metadata.

--- a/manage_breast_screening/mammograms/jinja2/mammograms/check_information/images_taken_card.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/check_information/images_taken_card.jinja
@@ -3,10 +3,21 @@
 
 {% macro views_taken(presented_images) %}
   {% if presented_images.total_count > 0 %}
-    {% for type, count in presented_images.views_taken.items() %}
-      <p class="nhsuk-u-margin-bottom-2">
-        <strong>{{ count }}× {{ type }}</strong>
-      </p>
+    {% for view, summary in presented_images.views_taken.items() %}
+      <div class="nhsuk-u-margin-bottom-2">
+        <p class="nhsuk-u-margin-bottom-1">
+          <strong>{{ summary.count }}× {{ view.short_name }}{% if summary.repeat_and_extra_count_string %}:{% endif %}</strong>
+          {%- if summary.repeat_and_extra_count_string %} {{ summary.repeat_and_extra_count_string }}{% endif %}
+        </p>
+        {% if summary.repeat_count and summary.repeat_reasons %}
+          <p class="nhsuk-u-margin-bottom-1">Repeat reason:</p>
+          <ul class="nhsuk-list nhsuk-list--bullet nhsuk-u-margin-bottom-0">
+            {% for reason in summary.repeat_reasons %}
+              <li> {{ reason }} </li>
+            {% endfor %}
+          </ul>
+        {% endif %}
+      </div>
     {% endfor %}
   {% else -%}
     Not provided
