add progressive enhancement for marking sections reviewed
Create a javascript module, app-mark-reviewed, to submit the form via
fetch(). The id of the card is passed as a data attribute so we can
show/hide statuses on success.

This is very similar to the check in component, and could possibly be
made generic, but I thought that might get complicated so I've just
kept it simple for now.

In both cases we are rendering all the HTML needed on first page load,
and toggling the `hidden` attribute as needed.

--- a/manage_breast_screening/mammograms/jinja2/mammograms/components/card_with_status.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/components/card_with_status.jinja
@@ -7,8 +7,11 @@
     {% call card({
       "heading": section.label
     }) %}
-      <div class="app-card-with-status__tag">
-        {{ tag(status_tag_properties) }}
+      <div class="app-card-with-status__tag" aria-live="polite">
+        <span data-hide-on-review>{{ tag(status_tag_properties.current) }}</span>
+        {% if action_button_properties and status_tag_properties.reviewed %}
+          <span data-show-on-review hidden>{{ tag(status_tag_properties.reviewed) }}</span>
+        {% endif %}
       </div>
 
       {% if outer_caller %}
@@ -21,10 +24,12 @@
         {% if action_button_properties.is_anchor %}
           <a href="{{ action_button_properties.href }}" class="nhsuk-button nhsuk-button--secondary"> {{ action_button_properties.text }} </a>
         {% else %}
-          <form method="post" action="{{ action_button_properties.href }}">
-            {{ csrf_input }}
-            <button type="submit" class="nhsuk-button nhsuk-button--secondary nhsuk-u-margin-bottom-0"> {{ action_button_properties.text }} </button>
-          </form>
+          <div data-module="app-mark-reviewed" data-status-card-id="{{ anchor }}">
+            <form method="post" action="{{ action_button_properties.href }}">
+              {{ csrf_input }}
+              <button type="submit" class="nhsuk-button nhsuk-button--secondary nhsuk-u-margin-bottom-0"> {{ action_button_properties.text }} </button>
+            </form>
+          </div>
         {% endif %}
       {% endif %}
     {% endcall %}
